<resources>
    <string name="app_name">Travel Diary App</string>
    <string name="create_account">Create account</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="travel_diary">Travel Diary</string>
    <string name="search">Search...</string>
    <string name="add_entry">Add Entry</string>
    <string name="start_recording_your_memories_to_see_them_here">Start recording your memories to see them here!</string>
    <string name="write_diary">Write diary</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="dear_diary">Dear diary,</string>
    <string name="tag_location">Tag location</string>
    <string name="attach_images">Attach images</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="start_typing">Start typing...</string>
    <string name="search_location">Search Location</string>
</resources>